css/common.css
body {
	background-color: rgb(218, 218, 218);
}

.container {
	background-color: white;
	box-shadow: 0px 0px 40px #888888;
}

@media (min-width: 750px) {
	.container {
  		width: 480px;
	}
	.button-container button {
		padding: 5px 10px;
		font-size: 12px;
		line-height: 1.5;
		border-radius: 3px;
	}
	.deck-buttons {
		text-align: right;
	}
}

@media (max-width: 750px) {
	.container.margin {
  		margin: 0;
	}
	.deck-buttons {
		text-align: left;
		padding-top: 5px;
	}
	.deck-buttons.expand {
		display: none;
	}
}

.button-container button {
	float: none;
}

.margin {
	margin-top: 10px;
	margin-bottom: 10px;
}

.margin-small {
	margin-top: 5px;
	margin-bottom: 5px;
}

.margin-right {
	margin-right: 7px;
}

.margin-left {
 	margin-left: 10px;
}

.margin-top {
	margin-top: 10px;
}

.margin-bottom-small {
	margin-bottom: 5px;
}

.header {
	font-weight: 500;
	line-height: 1.1;
	font-size: 18px;
}

.header a {
	text-decoration: none;
	color: black;
	padding-left: 0;
	padding-right: 0;
	text-align: center;
}

a.active {
	background-color: white;
	color: rgb(141, 144, 147);
}

a:focus {
	outline: 0;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
	color: #337ab7;
}

.btn-bigger {
	font-size: 1.5em;
}

.divider {
	border-top: 1px solid black;
	padding-top: 0;
}

.bottom-bg {
	background-color: rgb(242, 245, 244);
}

.hidden {
	display: none;
}

.invis {
	visibility: hidden;
}

.disabled {
	opacity: 0.5;
}

.padding-reset {
	padding: 0;
}

.padding-top {
	padding-top: 10px;
}

.padding-bottom {
	padding-bottom: 10px;
}

.padding-left {
	padding-left: 10px;
}

.padding-right {
	padding-right: 10px;
}

.border-top {
	border-top: 1px solid rgb(216, 216, 216);
}

.border-right {
	border-right: 1px solid rgb(216, 216, 216);
}

.list {
    list-style: none;
    padding: 0;
    margin-left: -15px;
}

.list li {
	padding-left: 15px;
}

.list li.active {
	background-color: #d9edf7;
}

.list a:hover, .list a {
	color: #337ab7;
}

.pointer {
	cursor: pointer;
}

.disclaimer {
	border-radius: 4px;
	border: 1px solid #DE6866;
	box-shadow: 0px 0px 6px #C48987;
}

.info {
	border-bottom: 1px solid lightgrey;
}

.newAccountLink,.loginLink {
	margin-top: 26px;
}

.glyphicon {
	display: none;
}

.has-error .glyphicon {
	display: block;
}

.card {
	word-wrap: break-word;
}

